--- a/packages/media/package.json
+++ b/packages/media/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.4",
   "type": "module",
   "description": "A media utility library for Solid.",
-  "main": "./dist/index.jsx",
-  "module": "./dist/index.jsx",
+  "main": "./dist/index/index.jsx",
+  "module": "./dist/index/index.jsx",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.jsx",
-      "default": "./dist/index.jsx"
-    }
+      "types": "./dist/index/index.d.ts",
+      "solid": "./dist/index/index.jsx",
+      "default": "./dist/index/index.jsx"
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "build": "tsc && rollup -c",
@@ -18,6 +19,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "rollup-preset-solid": "^2.0.1",
     "@rollup/plugin-typescript": "^11.1.2",
     "typescript": "^5.1.6",
     "solid-js": "^1.8.3",
